# hal

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  agent.md  blooio_client.py  pyproject.toml  supervisor.py
.claude/: settings.local.json
context/: gpt-1.txt  gpt-2.txt  gpt-3.txt  personal.md
docs/: agent-harness-tech-spec.md  blooio-api.md  deployment.md
hal/: __init__.py  agent.py  app.py  attachments.py  blooio_signature.py  cli.py  config.py  db.py  llm.py  openai_agent.py  restart.py  scheduler.py  self_modify.py  service.py
hal/tools/: fetch_page.py  web_search.py
notes/chats/: grp_0693bd3478ac4463.md  grp_550b8cef97c8437c.md  grp_e7d5182282924fac.md
notes/contacts/: +16238662766.md  +16475393099.md  +16476692446.md  +18052960612.md  +18133166253.md  +393496903693.md
plans/: conversation-modeling.md  deploy-to-vps.md  imessage-reactions.md  scheduled-agent-runs.md  web-fetch.md  web-search.md
prompts/: personality.md  sms_harness.md  system.md
scripts/: send_attachment.py
tests/: conftest.py  test_agent_harness.py  test_app.py  test_fetch_page.py  test_web_search.py
