[project]
name = "hal"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "ipython>=9.12.0",
    "openai-agents>=0.0.16",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
